
dashboard
======================
NOTE: The dashboard has known display issues in Internet Explorer 6.
* Allowed artifacts to be kept in an arbitrary locations.
* Allowed config.xml to be kept in an arbitrary location
* Can render html/xml/txt in the browser.
* Can display the unit test output for passed builds.
* Enhanced the dashboard to display artifacts directories as tree structure.
* Added a the cc-config (http://cc-config.sourceforge.net/) application so that it can be included in the dashboard (CC-658). Patch by Allan Wick. 
* Allowed artifacts to be shown and downloaded in case of a failed build
* Allowed project name to contain hyphen (-)
* Allowed integration with project management tools
* Allowed using dashboard-config.xml to configure the dashboard
* Deprecated the way to configure the dashboard via web.xml
* Applied the patch of CC-436 which committed by Szczepan Faber
* Fixed CC-656 : Compound Publisher
* Fixed CC-665 : error details are missing in the dashboard
* Fixed CC-670 : Dashboard can't parse logfiles with testsuite elements without time attribute
* Fixed CC-671 : Dashboard can't parse logfiles with non-default date formats

build loop
======================

AntBuilder/AntBootstrapper
----------------------
* CC-664 : Allow properties files for ant builder and ant bootstrapper. Add propertyfile attribute. Patch by Willem Verstraeten.

Builder Progress messages
----------------------
* CC-686 : add a Progress signaling api to allow plugins to notify the system of their progress as they execute (at first, only Builders).
Adds an optional "showProgess" tag to <schedule> and the builders: <composite>, <maven>, <maven2>, and CCDist <distributed>.
Progess messages are shown on the reporting/jsp project pages, below the project state text.

build.sh/release.sh scripts
----------------------
* Set JAVA_HOME properly on MacOSX (CC-681). Patch by Ingo Richter

CommandLine and Process exec handling
----------------------