@@ -5396,6 +5396,27 @@ saveLogDir="/usr/local/dev/projects/cc/logs"</td>
                 be passed on the ant command-line as "-Dname=value"<br/>
                 <b>Example:</b> <code>&lt;property name="foo" value="bar"/&gt;</code></td>
             </tr>
+            <tr>
+                <td>&lt;lib&gt;</td>
+                <td>0 .. *</td>
+                <td>Used to define additional <a href="http://ant.apache.org/manual/running.html#libs">library directories</a> for the ant build. The element
+                has one required attribute: "searchPath".<br/>
+                <b>Example:</b> <code>&lt;lib searchPath="/home/me/myantextensions"/&gt;</code></td>
+            </tr>
+            <tr>
+                <td>&lt;listener&gt;</td>
+                <td>0 .. *</td>
+                <td>Used to define additional <a href="http://ant.apache.org/manual/listeners.html">listeners</a> for the ant build. The element
+                has one required attribute: "classname".<br/>
+                <b>Example:</b> <code>&lt;listener classname="org.apache.tools.ant.listener.Log4jListener"/&gt;</code></td>
+            </tr>
+            <tr>
+                <td>&lt;logger&gt;</td>
+                <td>0 .. *</td>
+                <td>Used to define additional <a href="http://ant.apache.org/manual/listeners.html">loggers</a> for the ant build. The element
+                has one required attribute: "classname".<br/>
+                <b>Example:</b> <code>&lt;logger classname="org.apache.tools.ant.TimestampedLogger"/&gt;</code></td>
+            </tr>
             </tbody>
         </table>
 
